✨ Update NavBar Logo ✨

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,5 +3,8 @@
 @tailwind utilities;
 
 .logo{
-    margin-right: 3rem;
+    margin-right: 4rem;
+    font-size: 1.5rem;
+    margin-left: 0px;
+    margin-top: 0px;
 }
